@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: January 31, 2008</p>
+      <p>Last Updated: February 1, 2008</p>
     </td>
   </tr>
 </table>
@@ -964,6 +964,7 @@ Other memory:
 
 	* Added a test case to verify the Pascal P-Code interpreter
 	* Added /dev/zero
+	* 'errno' is now defined to be *get_errno_ptr() with no name conflicts
 </pre></ul>
 
 <table width ="100%">
