@@ -112,7 +112,7 @@ static void mq_rcvtimeout(int argc, uint32 pid)
     {
       /* Mark the errno value for the thread. */
 
-      wtcb->errno = ETIMEDOUT;
+      wtcb->pterrno = ETIMEDOUT;
 
       /* Restart the the task. */
 
